--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,7 @@
 @import '_normalize.scss';
 
 $category_num : 4;
+$color_border : #ddd;
 
 // typography
 $base-font-size: 16px;
@@ -57,9 +58,8 @@ header{
 				list-style: none;
 				float: left;
 				width: 100% / $category_num;
-				// padding: 3px 0;
-				box-sizing: border-box;
-				border-radius: 4px;
+                @include border-radius(4px);
+                @include box-sizing(border-box);
 				border: 1px solid #fff;
 				background-color: #f5f5f5;
 				color: #fff;
@@ -103,8 +103,8 @@ header{
     article{
         overflow: hidden;
         padding-top: 5px;
-        border-bottom: 1px solid #eee;
-        box-sizing: border-box;
+        border-bottom: 1px solid $color_border; 
+        @include box-sizing(border-box);
         .thumbnail{
             float: left;
             width: 20%;
@@ -139,6 +139,10 @@ header{
                 color: #999;
             }
         }
+        &:last-of-type{
+            margin-bottom: 1em;
+            // border: none; 
+        }
     }
 }
 #main.single{
@@ -162,7 +166,7 @@ header{
                 @include adjust-font-size-to(12px, 1);
             }
             th{
-                border-bottom: 1px solid #eee;
+                border-bottom: 1px solid $color_border;
             }
         }
     }
@@ -176,9 +180,52 @@ header{
         }
     }
 }
+.pagenate{
+    $color_pagenate : #337ab7;
+    overflow: hidden;
+    margin-left: 2%;
+    span,a{
+        float: left;
+        margin-left: -1px;
+        @include adjust-font-size-to(16px, 2);
+        padding-left: 1em;
+        padding-right: 1em;
+        @include box-sizing(border-box);
+        border: 1px solid $color_border;
+    }
+    a{
+        text-decoration: none;
+        color: $color_pagenate;
+        &:first-child{
+            @include border-radius(4px 0 0 4px);
+        }
+        &:last-child{
+            @include border-radius(0 4px 4px 0);
+        }
+        &:first-of-type{
+            margin-left: 0;
+        }
+    }
+    .current{
+        background-color: $color_pagenate;
+        border-color: $color_pagenate;
+        color: #fff;
+    }
+}
 pre{
-	border: 1px solid #ccc;
+	border: 1px solid $color_border;
 	@include rhythm(1, 1, 1, 1 );
 	padding-left: 1rem;
 	padding-right: 1rem;
+}
+.pagetop{
+    position: fixed;
+    bottom: 2%;
+    right: 5%;
+
+    a{
+        @include text-shadow(1px 1px 0 #fff);
+        @include adjust-font-size-to(48px, 3);
+        color: #333;
+    }
 }
