--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,10 +36,13 @@ h1,h2,h3,h4,h5,h6,p,td,th,pre{
 
 header{
 	h1{
+        float: left;
 		height: 24px;
         padding-left: 44px;
 		// letter-spacing: -1px;
         @include adjust-font-size-to(16px, 1);
+        @include rhythm-margins(0.5, 0.5);
+        // @include rhythm-padding(0.2, 0.2);
 		background: url('img/logo.svg') no-repeat 10px 0px;
 		background-size: 24px 24px;
         a{
@@ -48,6 +51,24 @@ header{
             color: #333;
         }
 	}
+    p.search{
+        float: right;
+        // height: 24px;
+        margin-right: 1em;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+        @include adjust-font-size-to(24px, 1);
+        @include rhythm-margins(0.3, 0.3);
+        @include rhythm-padding(0.2, 0.2);
+        // @include border-radius(2px);
+        // background-color: #eee;
+        // border: 1px solid #aaa;
+        // @include box-sizing(border-box);
+        color: #666;
+    }
+    form{
+        clear: both;
+    }
 	nav{
 		ul{
 			overflow: hidden;
