Add jquery at search form of toggle

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,8 +68,10 @@ header{
     }
     form{
         clear: both;
+        display: none;
     }
 	nav{
+        clear: both;
 		ul{
 			overflow: hidden;
             margin: 0 auto;
