--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,8 @@
 $category_num : 4;
 $color_border : #ddd;
 $color_link : #337ab7;
+$color_link_hover : #23527c;
+$max_width : 1024px;
 
 // typography
 $base-font-size: 16px;
@@ -37,6 +39,10 @@ h1,h2,h3,h4,h5,h6,p,td,th,pre{
 a{
     text-decoration: none;
     color: $color_link;
+    &:hover{
+        text-decoration: underline;
+        color: $color_link_hover;
+    }
 }
 
 header{
@@ -54,6 +60,10 @@ header{
             text-decoration: none;
             font-weight: bold;
             color: #333;
+            &:hover{
+                text-decoration: none;
+                color: #333;
+            }
         }
 	}
     p.search{
@@ -67,19 +77,16 @@ header{
         @include rhythm-padding(0.2, 0.2);
         @include border-radius(4px);
         background-color: #bbb;
-        // border: 1px solid #aaa;
-        // @include box-sizing(border-box);
-        // color: #666;
-        color: #fff;
+       color: #fff;
     }
     form{
         clear: both;
+        float: right;
         display: none;
+        // width: 95%;
         margin-left: 2%;
+        // margin-right: 2%;
         margin-bottom: 1em;
-        input{
-            // border-color: #333;
-        }
     }
 	nav{
         clear: both;
@@ -114,6 +121,10 @@ header{
                         @include rhythm-padding(0.2, 0);
                         font-weight: normal;
                     }
+                    &:hover{
+                        text-decoration: none;
+                        color: #333;
+                    }
                 }
 
                 &.etc a:before{
@@ -137,12 +148,19 @@ header{
 	}
 }
 
-#main{
+.primary{
     article{
         overflow: hidden;
         padding-top: 5px;
         border-bottom: 1px solid $color_border; 
         @include box-sizing(border-box);
+        a{
+            display: block;
+            &:hover{
+                background-color: #eee;
+                @include border-radius(4px);
+            }
+        }
         .thumbnail{
             float: left;
             width: 20%;
@@ -208,6 +226,9 @@ header{
             &:first-of-type{
                 margin-left: 0;
             }
+            &:hover{
+                background-color: #eee;
+            }
         }
         .current{
             background-color: $color_pagenate;
@@ -216,7 +237,7 @@ header{
         }
     }
 }
-#main.single{
+.primary.single{
     margin: 0 1em;
     article{
         overflow: auto;
@@ -251,7 +272,7 @@ header{
         }
     }
 }
-#sub{
+.secondary{
     .relation{
         h2{
             padding-left: 2%;
@@ -269,6 +290,9 @@ header{
                 list-style: none;
                 a{
                     text-decoration: none;
+                    &:hover img{
+                        @include opacity(0.8);
+                    }
                 }
                 img{
                     width: 100%;
@@ -284,14 +308,15 @@ header{
                     @include adjust-font-size-to(12px, 1);
                     background-color: #333;
                     color: #fff;
-                    font-weight: bold;
+                    // font-weight: bold;
+                    font-weight: normal;
                     @include opacity(0.9);
                 }
             }
         }
     }
 }
-#sidebar{
+.sidebar{
     margin: 0 2% 0 2%;
     aside{
         ul{
@@ -329,4 +354,115 @@ pre{
         @include adjust-font-size-to(48px, 3);
         color: #333;
     }
+}
+
+
+@media screen and (min-width: 768px){
+    header{
+        margin: 0 auto 1em auto;
+        h1{
+            height: 36px;
+            padding-left: 60px;
+            // letter-spacing: -1px;
+            @include adjust-font-size-to(24px, 1.5);
+            @include rhythm-margins(0.5, 0.5);
+            // @include rhythm-padding(0.2, 0.2);
+            background: url('img/logo.svg') no-repeat 8px 3px;
+            background-size: 36px 36px;
+        }
+        .search{
+            display: none;
+        }
+        .searchform{
+            clear: none;
+            display: block;
+            float: right;
+            @include rhythm-margins(0.5, 0.5);
+            input{
+                border: 1px solid #ccc;
+                @include border-radius(3px);
+                // @include adjust-font-size-to(12px, 1);
+                font-size: 12px;
+                padding: 0.4rem;
+            }
+            input[type="submit"]{
+                padding: 0.4rem 0.7rem;
+                font-weight: normal;
+                background-color: #e6e6e6;
+                background-repeat: repeat-x;
+                border: 1px solid #d2d2d2;
+                @include border-radius(3px);
+            }
+        }
+        nav{
+            ul{
+                li{
+                    height: 48px;
+                    a{
+                        @include adjust-font-size-to(16px, 2);
+                        &:before{
+                            display: inline;
+                            padding-right: 0.5rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .contents{
+        .main{
+            float: left;
+            width: 75%;
+            .primary{
+                article{
+                    margin-bottom: 1em;
+                    border-bottom: none;
+                    .content{
+                        h2{
+                            @include adjust-font-size-to(16px, 1);
+                            @include rhythm-margins(0, 0);
+                            @include rhythm-padding(0.3, 0.1);
+                            white-space: normal;
+                        }
+                        p{
+                            @include adjust-font-size-to(14px, 1);
+                            @include rhythm-margins(0, 0);
+                            @include rhythm-padding(0.2, 0.2);
+                            white-space: normal;
+                        }
+                        time{
+                            @include adjust-font-size-to(12px, 1);
+                            @include rhythm-margins(0, 0);
+                            @include rhythm-padding(0.2, 0.2);
+                        }
+                    }
+                }
+            }
+        }
+        .sidebar{
+            float: right;
+            width: 20%;
+        }
+    }
+    .pagetop{
+        a{
+            @include text-shadow(1px 1px 0 #fff);
+            @include adjust-font-size-to(64px, 4);
+            &:hover{
+                color: #666;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1024px){
+    header{
+        max-width: $max-width;
+        // margin: 0 auto
+    }
+    .contents{
+        max-width: $max-width;
+        margin: 0 auto
+    }
+
 }
