--- a/sass/style.scss
+++ b/sass/style.scss
@@ -90,6 +90,7 @@ header{
     }
 	nav{
         clear: both;
+        margin-bottom: 1em;
 		ul{
 			overflow: hidden;
             margin: 0 auto;
@@ -169,6 +170,8 @@ header{
             img{
                 width: 100%;
                 max-width: 150px;
+                height: 100%;
+                max-height: 150px;
             }
         }
         .content{
@@ -266,6 +269,7 @@ header{
         }
     }
     .navigation{
+        margin: 2em 0 2em 0;
         span{
             color: $color_link;
         }
@@ -381,7 +385,7 @@ footer{
             @include adjust-font-size-to(24px, 1.5);
             @include rhythm-margins(0.5, 0.5);
             // @include rhythm-padding(0.2, 0.2);
-            background: url('img/logo.svg') no-repeat 8px 3px;
+            background: url('img/logo.svg') no-repeat 10px -2px;
             background-size: 36px 36px;
         }
         .search{
@@ -427,12 +431,13 @@ footer{
     .contents{
         .main{
             float: left;
-            width: 70%;
+            width: 65%;
             .primary{
                 section{
-                    margin-bottom: 1em;
+                    margin-bottom: 2em;
                     border-bottom: none;
                     .content{
+                        margin-left: 1%;
                         h2{
                             @include adjust-font-size-to(16px, 1);
                             @include rhythm-margins(0, 0);
@@ -456,7 +461,7 @@ footer{
         }
         .sidebar{
             float: right;
-            width: 20%;
+            width: 25%;
         }
     }
     .pagetop{
