--- a/style.css
+++ b/style.css
@@ -441,7 +441,7 @@ th {
   padding: 0;
 }
 
-/* line 106, ../../../.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/typography/_vertical_rhythm.scss */
+/* line 106, ../../.rbenv/versions/2.2.2/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/typography/_vertical_rhythm.scss */
 html {
   font-size: 100%;
   line-height: 1.5em;
@@ -511,7 +511,12 @@ a:hover {
   color: #23527c;
 }
 
-/* line 49, sass/style.scss */
+/* line 47, sass/style.scss */
+code, kdb, pre, samp {
+  font-family: Consolas,monospace;
+}
+
+/* line 52, sass/style.scss */
 header h1 {
   float: left;
   height: 24px;
@@ -527,18 +532,18 @@ header h1 {
   background: url("img/logo.svg") no-repeat 10px 0px;
   background-size: 24px 24px;
 }
-/* line 59, sass/style.scss */
+/* line 62, sass/style.scss */
 header h1 a {
   text-decoration: none;
   font-weight: bold;
   color: #333;
 }
-/* line 63, sass/style.scss */
+/* line 66, sass/style.scss */
 header h1 a:hover {
   text-decoration: none;
   color: #333;
 }
-/* line 69, sass/style.scss */
+/* line 72, sass/style.scss */
 header p.search {
   float: right;
   margin-right: 1em;
@@ -562,7 +567,7 @@ header p.search {
   background-color: #bbb;
   color: #fff;
 }
-/* line 82, sass/style.scss */
+/* line 85, sass/style.scss */
 header form {
   clear: both;
   float: right;
@@ -570,18 +575,18 @@ header form {
   margin-left: 2%;
   margin-bottom: 1em;
 }
-/* line 91, sass/style.scss */
+/* line 94, sass/style.scss */
 header nav {
   clear: both;
   margin-bottom: 1em;
 }
-/* line 94, sass/style.scss */
+/* line 97, sass/style.scss */
 header nav ul {
   overflow: hidden;
   margin: 0 auto;
   padding: 0;
 }
-/* line 98, sass/style.scss */
+/* line 101, sass/style.scss */
 header nav ul li {
   list-style: none;
   float: left;
@@ -596,7 +601,7 @@ header nav ul li {
   background-color: #eee;
   color: #fff;
 }
-/* line 109, sass/style.scss */
+/* line 112, sass/style.scss */
 header nav ul li a {
   display: block;
   width: 100%;
@@ -610,7 +615,7 @@ header nav ul li a {
   color: #333;
   font-weight: bold;
 }
-/* line 118, sass/style.scss */
+/* line 121, sass/style.scss */
 header nav ul li a:before {
   display: block;
   font-family: FontAwesome;
@@ -624,33 +629,33 @@ header nav ul li a:before {
   padding-bottom: 0rem;
   font-weight: normal;
 }
-/* line 125, sass/style.scss */
+/* line 128, sass/style.scss */
 header nav ul li a:hover {
   text-decoration: none;
   color: #333;
 }
-/* line 131, sass/style.scss */
+/* line 134, sass/style.scss */
 header nav ul li.etc a:before {
   content: "\f044";
 }
-/* line 134, sass/style.scss */
+/* line 137, sass/style.scss */
 header nav ul li.dq10 a:before {
   content: "\f11b";
 }
-/* line 137, sass/style.scss */
+/* line 140, sass/style.scss */
 header nav ul li.web a:before {
   content: "\f1c9";
 }
-/* line 140, sass/style.scss */
+/* line 143, sass/style.scss */
 header nav ul li.money a:before {
   content: "\f157";
 }
-/* line 143, sass/style.scss */
+/* line 146, sass/style.scss */
 header nav ul li.current-menu-item, header nav ul li:hover {
   background-color: #ccc;
 }
 
-/* line 153, sass/style.scss */
+/* line 156, sass/style.scss */
 .primary section {
   overflow: hidden;
   padding-top: 5px;
@@ -659,39 +664,39 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 158, sass/style.scss */
+/* line 161, sass/style.scss */
 .primary section a {
   display: block;
 }
-/* line 160, sass/style.scss */
+/* line 163, sass/style.scss */
 .primary section a:hover {
   background-color: #eee;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 165, sass/style.scss */
+/* line 168, sass/style.scss */
 .primary section .thumbnail {
   float: left;
   width: 20%;
   padding: 4px 2%;
   text-align: center;
 }
-/* line 170, sass/style.scss */
+/* line 173, sass/style.scss */
 .primary section .thumbnail img {
   width: 100%;
   max-width: 150px;
   height: 100%;
   max-height: 150px;
 }
-/* line 177, sass/style.scss */
+/* line 180, sass/style.scss */
 .primary section .content {
   float: left;
   overflow: hidden;
   width: 72%;
   margin-right: 2%;
 }
-/* line 182, sass/style.scss */
+/* line 185, sass/style.scss */
 .primary section .content h2 {
   font-size: 14px;
   font-size: 0.875rem;
@@ -708,7 +713,7 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   white-space: nowrap;
   color: #337ab7;
 }
-/* line 189, sass/style.scss */
+/* line 192, sass/style.scss */
 .primary section .content p {
   font-size: 12px;
   font-size: 0.75rem;
@@ -724,7 +729,7 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   padding-bottom: 0.3rem;
   white-space: nowrap;
 }
-/* line 195, sass/style.scss */
+/* line 198, sass/style.scss */
 .primary section .content time {
   font-size: 11px;
   font-size: 0.6875rem;
@@ -740,16 +745,16 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   padding-bottom: 0.3rem;
   color: #999;
 }
-/* line 202, sass/style.scss */
+/* line 205, sass/style.scss */
 .primary section:last-of-type {
   margin-bottom: 1em;
 }
-/* line 207, sass/style.scss */
+/* line 210, sass/style.scss */
 .primary .pagenate {
   overflow: hidden;
   margin-left: 2%;
 }
-/* line 211, sass/style.scss */
+/* line 214, sass/style.scss */
 .primary .pagenate span, .primary .pagenate a {
   float: left;
   margin-left: -1px;
@@ -764,101 +769,112 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   box-sizing: border-box;
   border: 1px solid #ddd;
 }
-/* line 220, sass/style.scss */
+/* line 223, sass/style.scss */
 .primary .pagenate a {
   text-decoration: none;
   color: #337ab7;
 }
-/* line 223, sass/style.scss */
+/* line 226, sass/style.scss */
 .primary .pagenate a:first-child {
   -moz-border-radius: 4px 0 0 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px 0 0 4px;
 }
-/* line 226, sass/style.scss */
+/* line 229, sass/style.scss */
 .primary .pagenate a:last-child {
   -moz-border-radius: 0 4px 4px 0;
   -webkit-border-radius: 0;
   border-radius: 0 4px 4px 0;
 }
-/* line 229, sass/style.scss */
+/* line 232, sass/style.scss */
 .primary .pagenate a:first-of-type {
   margin-left: 0;
 }
-/* line 232, sass/style.scss */
+/* line 235, sass/style.scss */
 .primary .pagenate a:hover {
   background-color: #eee;
 }
-/* line 236, sass/style.scss */
+/* line 239, sass/style.scss */
 .primary .pagenate .current {
   background-color: #337ab7;
   border-color: #337ab7;
   color: #fff;
 }
 
-/* line 243, sass/style.scss */
+/* line 246, sass/style.scss */
 .single {
   margin: 0 2%;
 }
-/* line 245, sass/style.scss */
+/* line 248, sass/style.scss */
 .single article {
   overflow: auto;
   border-bottom-style: none;
 }
-/* line 248, sass/style.scss */
+/* line 251, sass/style.scss */
 .single article h2 {
   font-size: 20px;
   font-size: 1.25rem;
   line-height: 24px;
   line-height: 1.5rem;
+  padding-bottom: 10px;
+  padding-left: 0.5em;
+  border-bottom: 3px solid #333;
 }
-/* line 251, sass/style.scss */
+/* line 257, sass/style.scss */
 .single article p, .single article li {
+  font-size: 15px;
+  font-size: 0.9375rem;
+  line-height: 24px;
+  line-height: 1.5rem;
+}
+/* line 260, sass/style.scss */
+.single article p {
+  margin-bottom: 2em;
+  line-height: 1.8;
+}
+/* line 264, sass/style.scss */
+.single article time {
+  color: #999;
+}
+/* line 267, sass/style.scss */
+.single article p + ul,
+.single article p + ol {
+  margin-top: -1em;
+  padding: 0 0 0 2em;
+}
+/* line 273, sass/style.scss */
+.single article table th, .single article table td {
+  padding-left: 1em;
+  padding-right: 1em;
+  padding: 0.2em 1em;
   font-size: 14px;
   font-size: 0.875rem;
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 254, sass/style.scss */
-.single article time {
-  color: #999;
-}
-/* line 257, sass/style.scss */
-.single article ul {
-  padding: 0 0 0 2em;
-}
-/* line 261, sass/style.scss */
-.single article table th, .single article table td {
-  padding-left: 1em;
-  padding-right: 1em;
-  font-size: 12px;
-  font-size: 0.75rem;
-  line-height: 24px;
-  line-height: 1.5rem;
-}
-/* line 266, sass/style.scss */
+/* line 279, sass/style.scss */
 .single article table th {
   border-bottom: 1px solid #ddd;
 }
-/* line 271, sass/style.scss */
+/* line 284, sass/style.scss */
 .single .navigation {
   margin: 2em 0 2em 0;
   overflow: hidden;
 }
-/* line 273, sass/style.scss */
+/* line 286, sass/style.scss */
 .single .navigation span {
   color: #337ab7;
 }
-/* line 277, sass/style.scss */
+/* line 290, sass/style.scss */
 .single .navigation .prev {
   float: left;
 }
-/* line 280, sass/style.scss */
+/* line 293, sass/style.scss */
 .single .navigation .next {
   float: right;
 }
 
-/* line 287, sass/style.scss */
+/* line 300, sass/style.scss */
 .secondary .relation h2 {
   padding-left: 2%;
   font-size: 16px;
@@ -866,12 +882,12 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 291, sass/style.scss */
+/* line 304, sass/style.scss */
 .secondary .relation ul {
   padding: 0;
   overflow: hidden;
 }
-/* line 294, sass/style.scss */
+/* line 307, sass/style.scss */
 .secondary .relation ul li {
   position: relative;
   float: left;
@@ -880,20 +896,20 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   margin: 0 2% 1em 2%;
   list-style: none;
 }
-/* line 301, sass/style.scss */
+/* line 314, sass/style.scss */
 .secondary .relation ul li a {
   text-decoration: none;
 }
-/* line 303, sass/style.scss */
+/* line 316, sass/style.scss */
 .secondary .relation ul li a:hover img {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   opacity: 0.8;
 }
-/* line 307, sass/style.scss */
+/* line 320, sass/style.scss */
 .secondary .relation ul li img {
   width: 100%;
 }
-/* line 310, sass/style.scss */
+/* line 323, sass/style.scss */
 .secondary .relation ul li h3 {
   width: 96%;
   position: absolute;
@@ -913,15 +929,15 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   opacity: 0.9;
 }
 
-/* line 329, sass/style.scss */
+/* line 342, sass/style.scss */
 .sidebar {
   margin: 0 2% 0 2%;
 }
-/* line 332, sass/style.scss */
+/* line 345, sass/style.scss */
 .sidebar aside ul {
   padding: 0;
 }
-/* line 334, sass/style.scss */
+/* line 347, sass/style.scss */
 .sidebar aside ul li {
   list-style: none;
   font-size: 14px;
@@ -929,23 +945,23 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 337, sass/style.scss */
+/* line 350, sass/style.scss */
 .sidebar aside ul li > ul {
   padding-left: 1em;
 }
-/* line 342, sass/style.scss */
+/* line 355, sass/style.scss */
 .sidebar aside h2 {
   font-size: 16px;
   font-size: 1rem;
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 345, sass/style.scss */
+/* line 358, sass/style.scss */
 .sidebar aside a {
   color: #337ab7;
 }
 
-/* line 350, sass/style.scss */
+/* line 363, sass/style.scss */
 pre {
   border: 1px solid #ddd;
   margin-top: 24px;
@@ -960,7 +976,7 @@ pre {
   padding-right: 1rem;
 }
 
-/* line 356, sass/style.scss */
+/* line 369, sass/style.scss */
 footer {
   clear: both;
   height: 60px;
@@ -968,14 +984,14 @@ footer {
   text-align: center;
 }
 
-/* line 364, sass/style.scss */
+/* line 377, sass/style.scss */
 .pagetop {
   position: fixed;
   bottom: 2%;
   right: 5%;
   z-index: 100;
 }
-/* line 370, sass/style.scss */
+/* line 383, sass/style.scss */
 .pagetop a {
   text-shadow: 1px 1px 0 #fff;
   font-size: 48px;
@@ -986,11 +1002,11 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
-  /* line 379, sass/style.scss */
+  /* line 392, sass/style.scss */
   header {
     margin: 0 auto 1em auto;
   }
-  /* line 381, sass/style.scss */
+  /* line 394, sass/style.scss */
   header h1 {
     height: 36px;
     padding-left: 60px;
@@ -1005,11 +1021,11 @@ footer {
     background: url("img/logo.svg") no-repeat 10px -2px;
     background-size: 36px 36px;
   }
-  /* line 391, sass/style.scss */
+  /* line 404, sass/style.scss */
   header .search {
     display: none;
   }
-  /* line 394, sass/style.scss */
+  /* line 407, sass/style.scss */
   header .searchform {
     clear: none;
     display: block;
@@ -1020,7 +1036,7 @@ footer {
     margin-bottom: 12px;
     margin-bottom: 0.75rem;
   }
-  /* line 400, sass/style.scss */
+  /* line 413, sass/style.scss */
   header .searchform input {
     border: 1px solid #ccc;
     -moz-border-radius: 3px;
@@ -1029,7 +1045,7 @@ footer {
     font-size: 12px;
     padding: 0.4rem;
   }
-  /* line 407, sass/style.scss */
+  /* line 420, sass/style.scss */
   header .searchform input[type="submit"] {
     padding: 0.4rem 0.7rem;
     font-weight: normal;
@@ -1040,38 +1056,38 @@ footer {
     -webkit-border-radius: 3px;
     border-radius: 3px;
   }
-  /* line 418, sass/style.scss */
+  /* line 431, sass/style.scss */
   header nav ul li {
     height: 48px;
   }
-  /* line 420, sass/style.scss */
+  /* line 433, sass/style.scss */
   header nav ul li a {
     font-size: 16px;
     font-size: 1rem;
     line-height: 48px;
     line-height: 3rem;
   }
-  /* line 422, sass/style.scss */
+  /* line 435, sass/style.scss */
   header nav ul li a:before {
     display: inline;
     padding-right: 0.5rem;
   }
 
-  /* line 432, sass/style.scss */
+  /* line 445, sass/style.scss */
   .contents .main {
     float: left;
     width: 65%;
   }
-  /* line 436, sass/style.scss */
+  /* line 449, sass/style.scss */
   .contents .main .primary section {
     margin-bottom: 2em;
     border-bottom: none;
   }
-  /* line 439, sass/style.scss */
+  /* line 452, sass/style.scss */
   .contents .main .primary section .content {
     margin-left: 1%;
   }
-  /* line 441, sass/style.scss */
+  /* line 454, sass/style.scss */
   .contents .main .primary section .content h2 {
     font-size: 16px;
     font-size: 1rem;
@@ -1087,7 +1103,7 @@ footer {
     padding-bottom: 0.15rem;
     white-space: normal;
   }
-  /* line 447, sass/style.scss */
+  /* line 460, sass/style.scss */
   .contents .main .primary section .content p {
     font-size: 14px;
     font-size: 0.875rem;
@@ -1103,7 +1119,7 @@ footer {
     padding-bottom: 0.3rem;
     white-space: normal;
   }
-  /* line 453, sass/style.scss */
+  /* line 466, sass/style.scss */
   .contents .main .primary section .content time {
     font-size: 12px;
     font-size: 0.75rem;
@@ -1118,13 +1134,13 @@ footer {
     padding-bottom: 5px;
     padding-bottom: 0.3rem;
   }
-  /* line 462, sass/style.scss */
+  /* line 475, sass/style.scss */
   .contents .sidebar {
     float: right;
     width: 25%;
   }
 
-  /* line 468, sass/style.scss */
+  /* line 481, sass/style.scss */
   .pagetop a {
     text-shadow: 1px 1px 0 #fff;
     font-size: 64px;
@@ -1132,18 +1148,18 @@ footer {
     line-height: 96px;
     line-height: 6rem;
   }
-  /* line 471, sass/style.scss */
+  /* line 484, sass/style.scss */
   .pagetop a:hover {
     color: #666;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 479, sass/style.scss */
+  /* line 492, sass/style.scss */
   header {
     max-width: 1024px;
   }
 
-  /* line 483, sass/style.scss */
+  /* line 496, sass/style.scss */
   .contents {
     max-width: 1024px;
     margin: 0 auto;
